Changed to use ThreadPoolExecutor.  Changed UI to have two views for dual core processor.  Cleaned up.