@@ -1,27 +1,19 @@
 package org.gmplib.test;
 
-import android.os.AsyncTask;
 import android.util.Log;
 
 import org.gmplib.gmpjni.GMP;
 import org.gmplib.gmpjni.GMP.mpz_t;
 import org.gmplib.gmpjni.GMP.GMPException;
 import org.gmplib.gmpjni.GMP.randstate_t;
-//import java.io.IOException;
 
-public class Cong_2Exp_Task extends AsyncTask<Integer, Integer, Integer> {
+public class Cong_2Exp_Task extends TaskBase implements Runnable {
 
     private static final String TAG = "Cong_2Exp_Task";
     
-    private UI uinterface;
-    private RandomNumberFile rng;
-    
-    public Cong_2Exp_Task(UI ui, RandomNumberFile rng)
+    public Cong_2Exp_Task(UI ui)
     {
-        super();
-        this.uinterface = ui;
-        this.rng = rng;
-        failmsg = null;
+        super(ui, TAG);
     }
 
     private void check_one (mpz_t a, mpz_t c, long d, int want)
@@ -154,9 +146,11 @@ public class Cong_2Exp_Task extends AsyncTask<Integer, Integer, Integer> {
                 GMP.mpz_combit (a, TestUtil.urandom(rands) % d);
                 check_one (a, c, d, 0);
 	    }
-            if (isCancelled()) break;
+            if (Thread.interrupted()) {
+                throw new Exception("Task cancelled");
+            }
             if (i % 100 == 0) {
-                publishProgress(new Integer((int)((float)(i+1)*50.0/(float)reps)));
+                onProgressUpdate(Integer.valueOf((int)((float)(i+1)*50.0/(float)reps)));
             }
         }
 
@@ -197,29 +191,36 @@ public class Cong_2Exp_Task extends AsyncTask<Integer, Integer, Integer> {
             GMP.mpz_add (a , a, c);
 
             check_one (a, c, d, (ea >= d ? 1 : 0));
-            if (isCancelled()) break;
+            if (Thread.interrupted()) {
+                throw new Exception("Task cancelled");
+            }
             if (i % 100 == 0) {
-                publishProgress(new Integer((int)(50.0 + (float)(i+1)*50.0/(float)reps)));
+                onProgressUpdate(Integer.valueOf((int)(50.0 + (float)(i+1)*50.0/(float)reps)));
             }
         }
     }
 
-    protected Integer doInBackground(Integer... params)
+    public void run()
     {
         int reps = 5000;
         randstate_t rands;
         long seed;
         int ret = 0;
 
+        if (!isActive()) {
+            return;
+        }
+        onPreExecute();
         try {
-            GMP.init();
             //tests_start ();
             
-            seed = rng.nextInt();
+            seed = uinterface.getSeed();
             if (seed < 0) {
                 seed = 0x100000000L + seed;
             }
-            Log.d(TAG, "seed=" + seed);
+            String s = "seed=" + seed;
+            Log.d(TAG, s);
+            uinterface.display(s);
             rands = new randstate_t(seed);
 
             if (params.length > 0) {
@@ -238,39 +239,8 @@ public class Cong_2Exp_Task extends AsyncTask<Integer, Integer, Integer> {
             failmsg = e.getMessage();
             ret = -1;
         }
-        return ret;
+        onPostExecute(Integer.valueOf(ret));
     }
-
-    protected void onPreExecute()
-    {
-        uinterface.display(TAG);
-    }
-
-    protected void onProgressUpdate(Integer... progress)
-    {
-        uinterface.display("progress=" + progress[0]);
-    }
-
-    protected void onPostExecute(Integer result)
-    {
-        uinterface.display("result=" + result);
-        if (result == 0) {
-            uinterface.display("PASS");
-            uinterface.nextTask();
-        } else {
-            uinterface.display(failmsg);
-            uinterface.display("FAIL");
-        }
-    }
-
-    protected void onCancelled(Integer result)
-    {
-        uinterface.display("result=" + result);
-        uinterface.display(failmsg);
-        uinterface.display("FAIL");
-    }
-
-    private String failmsg;
 
     private void dump_abort(String msg, mpz_t a, mpz_t c, mpz_t diff, mpz_t d2exp, long d)
         throws Exception
