@@ -1,32 +1,23 @@
 package org.gmplib.test;
 
-import android.os.AsyncTask;
 import android.util.Log;
 
 import org.gmplib.gmpjni.GMP;
 import org.gmplib.gmpjni.GMP.mpz_t;
 import org.gmplib.gmpjni.GMP.GMPException;
-import org.gmplib.gmpjni.GMP.MutableInteger;
 import org.gmplib.gmpjni.GMP.randstate_t;
-//import java.io.IOException;
 
-public class FDiv_UI_Task extends AsyncTask<Integer, Integer, Integer> {
+public class FDiv_UI_Task extends TaskBase implements Runnable {
 
     private static final String TAG = "FDiv_UI_Task";
     
-    private UI uinterface;
-    private RandomNumberFile rng;
-    
-    public FDiv_UI_Task(UI ui, RandomNumberFile rng)
+    public FDiv_UI_Task(UI ui)
     {
-        super();
-        this.uinterface = ui;
-        this.rng = rng;
-        failmsg = null;
+        super(ui, TAG);
     }
 
 
-    protected Integer doInBackground(Integer... params)
+    public void run()
     {
         mpz_t dividend;
         mpz_t quotient;
@@ -49,15 +40,20 @@ public class FDiv_UI_Task extends AsyncTask<Integer, Integer, Integer> {
         long seed;
         int ret = 0;
 
+        if (!isActive()) {
+            return;
+        }
+        onPreExecute();
         try {
-            GMP.init();
             //tests_start ();
             
-            seed = rng.nextInt();
+            seed = uinterface.getSeed();
             if (seed < 0) {
                 seed = 0x100000000L + seed;
             }
-            Log.d(TAG, "seed=" + seed);
+            String s = "seed=" + seed;
+            Log.d(TAG, s);
+            uinterface.display(s);
             rands = new randstate_t(seed);
 
             bs = new mpz_t();
@@ -149,9 +145,11 @@ public class FDiv_UI_Task extends AsyncTask<Integer, Integer, Integer> {
                     dump_abort ("remainder returned from mpz_fdiv_ui is wrong",
                                 dividend, divisor);
                 }
-                if (isCancelled()) break;
+                if (Thread.interrupted()) {
+                    throw new Exception("Task cancelled");
+                }
                 if (i % 100 == 0) {
-                    publishProgress(new Integer((int)((float)(i+1)*100.0/(float)reps)));
+                    onProgressUpdate(Integer.valueOf((int)((float)(i+1)*100.0/(float)reps)));
                 }
             }
         }
@@ -163,39 +161,8 @@ public class FDiv_UI_Task extends AsyncTask<Integer, Integer, Integer> {
             failmsg = e.getMessage();
             ret = -1;
         }
-        return ret;
+        onPostExecute(Integer.valueOf(ret));
     }
-
-    protected void onPreExecute()
-    {
-        uinterface.display(TAG);
-    }
-
-    protected void onProgressUpdate(Integer... progress)
-    {
-        uinterface.display("progress=" + progress[0]);
-    }
-
-    protected void onPostExecute(Integer result)
-    {
-        uinterface.display("result=" + result);
-        if (result == 0) {
-            uinterface.display("PASS");
-            uinterface.nextTask();
-        } else {
-            uinterface.display(failmsg);
-            uinterface.display("FAIL");
-        }
-    }
-
-    protected void onCancelled(Integer result)
-    {
-        uinterface.display("result=" + result);
-        uinterface.display(failmsg);
-        uinterface.display("FAIL");
-    }
-
-    private String failmsg;
 
     private void dump_abort(String msg, mpz_t dividend, long divisor)
         throws Exception
