@@ -1,29 +1,21 @@
 package org.gmplib.test;
 
-import android.os.AsyncTask;
 import android.util.Log;
 
 import org.gmplib.gmpjni.GMP;
 import org.gmplib.gmpjni.GMP.mpz_t;
 import org.gmplib.gmpjni.GMP.GMPException;
-//import java.io.IOException;
 
-public class Fac_UI_Task extends AsyncTask<Integer, Integer, Integer> {
+public class Fac_UI_Task extends TaskBase implements Runnable {
 
     private static final String TAG = "Fac_UI_Task";
     
-    private UI uinterface;
-    private RandomNumberFile rng;
-    
-    public Fac_UI_Task(UI ui, RandomNumberFile rng)
+    public Fac_UI_Task(UI ui)
     {
-        super();
-        this.uinterface = ui;
-        this.rng = rng;
-        failmsg = null;
+        super(ui, TAG);
     }
 
-    protected Integer doInBackground(Integer... params)
+    public void run()
     {
         int   n;
         int   m;
@@ -33,8 +25,11 @@ public class Fac_UI_Task extends AsyncTask<Integer, Integer, Integer> {
         mpz_t   r;
         int   ret = 0;
 
+        if (!isActive()) {
+            return;
+        }
+        onPreExecute();
         try {
-            GMP.init();
             //tests_start ();
             
             Log.d(TAG, "no randomness");
@@ -80,9 +75,11 @@ public class Fac_UI_Task extends AsyncTask<Integer, Integer, Integer> {
                 m ^= 1;
                 GMP.mpz_mul_ui (df[m], df[m], (long)n+1);  /* (n+1)!! = (n-1)!! * (n+1) */
                 GMP.mpz_mul_ui (f, f, (long)n+1);  /* (n+1)! = n! * (n+1) */
-                if (isCancelled()) break;
+                if (Thread.interrupted()) {
+                    throw new Exception("Task cancelled");
+                }
                 if (n % 100 == 0) {
-                    publishProgress(new Integer((int)((float)(n+1)*100.0/(float)limit)));
+                    onProgressUpdate(Integer.valueOf((int)((float)(n+1)*100.0/(float)limit)));
                 }
             }
             n = 1048573; /* a prime */
@@ -111,39 +108,8 @@ public class Fac_UI_Task extends AsyncTask<Integer, Integer, Integer> {
             failmsg = e.getMessage();
             ret = -1;
         }
-        return ret;
+        onPostExecute(Integer.valueOf(ret));
     }
-
-    protected void onPreExecute()
-    {
-        uinterface.display(TAG);
-    }
-
-    protected void onProgressUpdate(Integer... progress)
-    {
-        uinterface.display("progress=" + progress[0]);
-    }
-
-    protected void onPostExecute(Integer result)
-    {
-        uinterface.display("result=" + result);
-        if (result == 0) {
-            uinterface.display("PASS");
-            uinterface.nextTask();
-        } else {
-            uinterface.display(failmsg);
-            uinterface.display("FAIL");
-        }
-    }
-
-    protected void onCancelled(Integer result)
-    {
-        uinterface.display("result=" + result);
-        uinterface.display(failmsg);
-        uinterface.display("FAIL");
-    }
-
-    private String failmsg;
 
     private void dump_abort(String msg)
         throws Exception
