@@ -1,26 +1,18 @@
 package org.gmplib.test;
 
-import android.os.AsyncTask;
 import android.util.Log;
 
 import org.gmplib.gmpjni.GMP;
 import org.gmplib.gmpjni.GMP.mpz_t;
 import org.gmplib.gmpjni.GMP.GMPException;
-//import java.io.IOException;
 
-public class Fib_UI_Task extends AsyncTask<Integer, Integer, Integer> {
+public class Fib_UI_Task extends TaskBase implements Runnable {
 
     private static final String TAG = "Fib_UI_Task";
     
-    private UI uinterface;
-    private RandomNumberFile rng;
-    
-    public Fib_UI_Task(UI ui, RandomNumberFile rng)
+    public Fib_UI_Task(UI ui)
     {
-        super();
-        this.uinterface = ui;
-        this.rng = rng;
-        failmsg = null;
+        super(ui, TAG);
     }
 
     private static long MPZ_FIB_SIZE_FLOAT(int n)
@@ -61,7 +53,7 @@ public class Fib_UI_Task extends AsyncTask<Integer, Integer, Integer> {
         }
     }
 
-    protected Integer doInBackground(Integer... params)
+    public void run()
     {
         int   n;
         int   limit = 100 * GMP.GMP_LIMB_BITS;
@@ -71,8 +63,11 @@ public class Fib_UI_Task extends AsyncTask<Integer, Integer, Integer> {
         mpz_t          got_fn;
         mpz_t          got_fn1;
 
+        if (!isActive()) {
+            return;
+        }
+        onPreExecute();
         try {
-            GMP.init();
             //tests_start ();
             
             Log.d(TAG, "no randomness");
@@ -153,9 +148,11 @@ public class Fib_UI_Task extends AsyncTask<Integer, Integer, Integer> {
 
                 GMP.mpz_add (want_fn1, want_fn1, want_fn);  /* F[n+1] = F[n] + F[n-1] */
                 GMP.mpz_swap (want_fn1, want_fn);
-                if (isCancelled()) break;
+                if (Thread.interrupted()) {
+                    throw new Exception("Task cancelled");
+                }
                 if (n % 100 == 0) {
-                    publishProgress(new Integer((int)((float)(n+1)*100.0/(float)limit)));
+                    onProgressUpdate(Integer.valueOf((int)((float)(n+1)*100.0/(float)limit)));
                 }
             }
         }
@@ -167,39 +164,8 @@ public class Fib_UI_Task extends AsyncTask<Integer, Integer, Integer> {
             failmsg = e.getMessage();
             ret = -1;
         }
-        return ret;
+        onPostExecute(Integer.valueOf(ret));
     }
-
-    protected void onPreExecute()
-    {
-        uinterface.display(TAG);
-    }
-
-    protected void onProgressUpdate(Integer... progress)
-    {
-        uinterface.display("progress=" + progress[0]);
-    }
-
-    protected void onPostExecute(Integer result)
-    {
-        uinterface.display("result=" + result);
-        if (result == 0) {
-            uinterface.display("PASS");
-            uinterface.nextTask();
-        } else {
-            uinterface.display(failmsg);
-            uinterface.display("FAIL");
-        }
-    }
-
-    protected void onCancelled(Integer result)
-    {
-        uinterface.display("result=" + result);
-        uinterface.display(failmsg);
-        uinterface.display("FAIL");
-    }
-
-    private String failmsg;
 
     private void dump_abort(String msg, mpz_t want, mpz_t got, mpz_t want1, mpz_t got1)
         throws Exception
