@@ -1,30 +1,22 @@
 package org.gmplib.test;
 
-import android.os.AsyncTask;
 import android.util.Log;
 
 import org.gmplib.gmpjni.GMP;
 import org.gmplib.gmpjni.GMP.mpz_t;
 import org.gmplib.gmpjni.GMP.randstate_t;
 import org.gmplib.gmpjni.GMP.GMPException;
-//import java.io.IOException;
 
-public class Invert_Task extends AsyncTask<Integer, Integer, Integer>
+public class Invert_Task extends TaskBase implements Runnable
 {
     private static final String TAG = "Invert_Task";
     
-    private UI uinterface;
-    private RandomNumberFile rng;
-    
-    public Invert_Task(UI ui, RandomNumberFile rng)
+    public Invert_Task(UI ui)
     {
-        super();
-        this.uinterface = ui;
-        this.rng = rng;
-        failmsg = null;
+        super(ui, TAG);
     }
 
-    protected Integer doInBackground(Integer... params)
+    public void run()
     {
         mpz_t a;
         mpz_t m;
@@ -40,8 +32,11 @@ public class Invert_Task extends AsyncTask<Integer, Integer, Integer>
         long seed;
         int ret = 0;
 
+        if (!isActive()) {
+            return;
+        }
+        onPreExecute();
         try {
-            GMP.init();
             a = new mpz_t();
             m = new mpz_t();
             ainv = new mpz_t();
@@ -49,11 +44,13 @@ public class Invert_Task extends AsyncTask<Integer, Integer, Integer>
             bs = new mpz_t();
             //tests_start ();
             
-            seed = rng.nextInt();
+            seed = uinterface.getSeed();
             if (seed < 0) {
                 seed = 0x100000000L + seed;
             }
-            Log.d(TAG, "seed=" + seed);
+            String s = "seed=" + seed;
+            Log.d(TAG, s);
+            uinterface.display(s);
             rands = new randstate_t(seed);
 
             if (params.length > 0) {
@@ -120,9 +117,11 @@ public class Invert_Task extends AsyncTask<Integer, Integer, Integer>
                         ***/
                     }
                 }
-                if (isCancelled()) break;
+                if (Thread.interrupted()) {
+                    throw new Exception("Task cancelled");
+                }
                 if (test % 10 == 0) {
-                    publishProgress(new Integer((int)((float)(test+1)*100.0/(float)reps)));
+                    onProgressUpdate(Integer.valueOf((int)((float)(test+1)*100.0/(float)reps)));
                 }
             }
         }
@@ -134,32 +133,8 @@ public class Invert_Task extends AsyncTask<Integer, Integer, Integer>
             failmsg = e.getMessage();
             ret = -1;
         }
-        return ret;
+        onPostExecute(Integer.valueOf(ret));
     }
-
-    protected void onPreExecute()
-    {
-        uinterface.display(TAG);
-    }
-
-    protected void onProgressUpdate(Integer... progress)
-    {
-        uinterface.display("progress=" + progress[0]);
-    }
-
-    protected void onPostExecute(Integer result)
-    {
-        uinterface.display("result=" + result);
-        if (result == 0) {
-            uinterface.display("PASS");
-            uinterface.nextTask();
-        } else {
-            uinterface.display(failmsg);
-            uinterface.display("FAIL");
-        }
-    }
-
-    private String failmsg;
 
     private void dump_abort(String msg, mpz_t a, mpz_t m)
         throws Exception
