@@ -1,27 +1,18 @@
 package org.gmplib.test;
 
-import android.os.AsyncTask;
-import android.util.Log;
+//import android.util.Log;
 
 import org.gmplib.gmpjni.GMP;
 import org.gmplib.gmpjni.GMP.mpz_t;
-import org.gmplib.gmpjni.GMP.randstate_t;
 import org.gmplib.gmpjni.GMP.GMPException;
-//import java.io.IOException;
 
-public class LucNum_UI_Task extends AsyncTask<Integer, Integer, Integer>
+public class LucNum_UI_Task extends TaskBase implements Runnable
 {
     private static final String TAG = "LucNum_UI_Task";
     
-    private UI uinterface;
-    private RandomNumberFile rng;
-    
-    public LucNum_UI_Task(UI ui, RandomNumberFile rng)
+    public LucNum_UI_Task(UI ui)
     {
-        super();
-        this.uinterface = ui;
-        this.rng = rng;
-        failmsg = null;
+        super(ui, TAG);
     }
 
     private void check_sequence (long limit)
@@ -74,23 +65,26 @@ public class LucNum_UI_Task extends AsyncTask<Integer, Integer, Integer>
 
             GMP.mpz_add (want_ln1, want_ln1, want_ln);  /* L[n+1] = L[n] + L[n-1] */
             GMP.mpz_swap (want_ln1, want_ln);
-            if (isCancelled()) {
+            if (Thread.interrupted()) {
                 throw new Exception("Task cancelled");
             }
             if (n % 100 == 0) {
-                 publishProgress(new Integer((int)((float)(n+1)*100.0/(float)limit)));
+                 onProgressUpdate(Integer.valueOf((int)((float)(n+1)*100.0/(float)limit)));
             }
         }
 
     }
 
-    protected Integer doInBackground(Integer... params)
+    public void run()
     {
         long  limit = 100 * 32; // * GMP_LIMB_BITS;
         int ret = 0;
 
+        if (!isActive()) {
+            return;
+        }
+        onPreExecute();
         try {
-            GMP.init();
             //tests_start ();
             
             if (params.length > 0) {
@@ -112,39 +106,8 @@ public class LucNum_UI_Task extends AsyncTask<Integer, Integer, Integer>
             failmsg = e.getMessage();
             ret = -1;
         }
-        return ret;
+        onPostExecute(Integer.valueOf(ret));
     }
-
-    protected void onPreExecute()
-    {
-        uinterface.display(TAG);
-    }
-
-    protected void onProgressUpdate(Integer... progress)
-    {
-        uinterface.display("progress=" + progress[0]);
-    }
-
-    protected void onPostExecute(Integer result)
-    {
-        uinterface.display("result=" + result);
-        if (result == 0) {
-            uinterface.display("PASS");
-            uinterface.nextTask();
-        } else {
-            uinterface.display(failmsg);
-            uinterface.display("FAIL");
-        }
-    }
-
-    protected void onCancelled(Integer result)
-    {
-        uinterface.display("result=" + result);
-        uinterface.display(failmsg);
-        uinterface.display("FAIL");
-    }
-
-    private String failmsg;
 
     private void dump_abort(String msg,
                             mpz_t want, mpz_t got)
