@@ -1,33 +1,24 @@
 package org.gmplib.test;
 
-import android.os.AsyncTask;
-import android.util.Log;
+//import android.util.Log;
 
 import org.gmplib.gmpjni.GMP;
 import org.gmplib.gmpjni.GMP.mpz_t;
-import org.gmplib.gmpjni.GMP.randstate_t;
 import org.gmplib.gmpjni.GMP.GMPException;
-//import java.io.IOException;
 
-public class MFac_UIUI_Task extends AsyncTask<Integer, Integer, Integer>
+public class MFac_UIUI_Task extends TaskBase implements Runnable
 {
     private static final String TAG = "MFac_UIUI_Task";
     
-    private UI uinterface;
-    private RandomNumberFile rng;
-    
-    public MFac_UIUI_Task(UI ui, RandomNumberFile rng)
+    public MFac_UIUI_Task(UI ui)
     {
-        super();
-        this.uinterface = ui;
-        this.rng = rng;
-        failmsg = null;
+        super(ui, TAG);
     }
 
     private static final int MULTIFAC_WHEEL = (2*3*11);
     private static final int MULTIFAC_WHEEL2 = (5*13);
 
-    protected Integer doInBackground(Integer... params)
+    public void run()
     {
         mpz_t[] ref = new mpz_t[MULTIFAC_WHEEL];
         mpz_t[] ref2 = new mpz_t[MULTIFAC_WHEEL2];
@@ -40,8 +31,11 @@ public class MFac_UIUI_Task extends AsyncTask<Integer, Integer, Integer>
         long  step = 1;
         int ret = 0;
 
+        if (!isActive()) {
+            return;
+        }
+        onPreExecute();
         try {
-            GMP.init();
             res = new mpz_t();
             //tests_start ();
             
@@ -101,11 +95,11 @@ public class MFac_UIUI_Task extends AsyncTask<Integer, Integer, Integer>
                 } else {
                     n += step;
                 }
-                if (isCancelled()) {
+                if (Thread.interrupted()) {
                     throw new Exception("Task cancelled");
                 }
                 if (n % 10 == 0) {
-                    publishProgress(new Integer((int)((float)(n+1)*100.0/(float)limit)));
+                    onProgressUpdate(Integer.valueOf((int)((float)(n+1)*100.0/(float)limit)));
                 }
             }
             GMP.mpz_fac_ui (ref[0], n);
@@ -156,39 +150,8 @@ public class MFac_UIUI_Task extends AsyncTask<Integer, Integer, Integer>
             failmsg = e.getMessage();
             ret = -1;
         }
-        return ret;
+        onPostExecute(Integer.valueOf(ret));
     }
-
-    protected void onPreExecute()
-    {
-        uinterface.display(TAG);
-    }
-
-    protected void onProgressUpdate(Integer... progress)
-    {
-        uinterface.display("progress=" + progress[0]);
-    }
-
-    protected void onPostExecute(Integer result)
-    {
-        uinterface.display("result=" + result);
-        if (result == 0) {
-            uinterface.display("PASS");
-            uinterface.nextTask();
-        } else {
-            uinterface.display(failmsg);
-            uinterface.display("FAIL");
-        }
-    }
-
-    protected void onCancelled(Integer result)
-    {
-        uinterface.display("result=" + result);
-        uinterface.display(failmsg);
-        uinterface.display("FAIL");
-    }
-
-    private String failmsg;
 
     private void dump_abort(String msg,
                             mpz_t got, mpz_t want)
