@@ -1,27 +1,19 @@
 package org.gmplib.test;
 
-import android.os.AsyncTask;
 import android.util.Log;
 
 import org.gmplib.gmpjni.GMP;
 import org.gmplib.gmpjni.GMP.mpz_t;
 import org.gmplib.gmpjni.GMP.randstate_t;
 import org.gmplib.gmpjni.GMP.GMPException;
-//import java.io.IOException;
 
-public class PopCount_Task extends AsyncTask<Integer, Integer, Integer>
+public class PopCount_Task extends TaskBase implements Runnable
 {
     private static final String TAG = "PopCount_Task";
     
-    private UI uinterface;
-    private RandomNumberFile rng;
-    
-    public PopCount_Task(UI ui, RandomNumberFile rng)
+    public PopCount_Task(UI ui)
     {
-        super();
-        this.uinterface = ui;
-        this.rng = rng;
-        failmsg = null;
+        super(ui, TAG);
     }
 
     private void check_onebit ()
@@ -155,29 +147,36 @@ public class PopCount_Task extends AsyncTask<Integer, Integer, Integer>
                 abort ();
                 ***/
             }
-            if (isCancelled()) break;
+            if (Thread.interrupted()) {
+                throw new Exception("Task cancelled");
+            }
             if (i % 100 == 0) {
-                publishProgress(new Integer((int)((float)(i+1)*100.0/(float)reps)));
+                onProgressUpdate(Integer.valueOf((int)((float)(i+1)*100.0/(float)reps)));
             }
         }
     }
 
-    protected Integer doInBackground(Integer... params)
+    public void run()
     {
         int reps = 1000; // 10000;
         randstate_t rands;
         long seed;
         int ret = 0;
 
+        if (!isActive()) {
+            return;
+        }
+        onPreExecute();
         try {
-            GMP.init();
             //tests_start ();
             
-            seed = rng.nextInt();
+            seed = uinterface.getSeed();
             if (seed < 0) {
                 seed = 0x100000000L + seed;
             }
-            Log.d(TAG, "seed=" + seed);
+            String s = "seed=" + seed;
+            Log.d(TAG, s);
+            uinterface.display(s);
             rands = new randstate_t(seed);
 
             if (params.length > 0) {
@@ -196,32 +195,8 @@ public class PopCount_Task extends AsyncTask<Integer, Integer, Integer>
             failmsg = e.getMessage();
             ret = -1;
         }
-        return ret;
+        onPostExecute(Integer.valueOf(ret));
     }
-
-    protected void onPreExecute()
-    {
-        uinterface.display(TAG);
-    }
-
-    protected void onProgressUpdate(Integer... progress)
-    {
-        uinterface.display("progress=" + progress[0]);
-    }
-
-    protected void onPostExecute(Integer result)
-    {
-        uinterface.display("result=" + result);
-        if (result == 0) {
-            uinterface.display("PASS");
-            uinterface.nextTask();
-        } else {
-            uinterface.display(failmsg);
-            uinterface.display("FAIL");
-        }
-    }
-
-    private String failmsg;
 
     private void dump_abort(String msg)
         throws Exception
